nbibtex (0.9.18-2) unstable; urgency=low

  * Add debian/watch file for uscan
  * Add URLs to debian/copyright
  * Pointless LaTeX change in fun.tex to avoid \verb
  * Fix nbibtex(1) .rules typo
  * Re-integrate debian/ packaging changes from 0.9.17-2

 -- Barak A. Pearlmutter <bap@debian.org>  Mon, 11 Aug 2008 12:52:24 +0200

nbibtex (0.9.18-1) unstable; urgency=low

  * New upstream release, with some features suggested by Barak Pearlmutter:
  * Fixed typo sed s/'^[.]with'/with/ in nbibtex man page
  * For tags, use the same case in the .bbl as is used in the .aux
  * A @string defined in one .bib file can now be used in a later file
  * Accept pathname on command line to point to .bib file
  * Improvements and corrections to debian/control

 -- Norman Ramsey <nr@eecs.harvard.edu>  Fri, 25 Jul 2008 17:07:58 -0400

nbibtex (0.9.17-2) unstable; urgency=low

  * First official Debian version
  * packaging tweaks

 -- Barak A. Pearlmutter <bap@debian.org>  Sun, 20 Jul 2008 20:43:27 +0200

nbibtex (0.9.17-1) unstable; urgency=low

  * New upstream release
  * show bad citation key with whitespace

 -- Norman Ramsey <nr@eecs.harvard.edu>  Sat, 26 Apr 2008 13:15:22 -0400

nbibtex (0.9.16-1) unstable; urgency=low

  * New upstream release
  * make dependent on texlive before tetex

 -- Norman Ramsey <nr@eecs.harvard.edu>  Sat, 19 May 2007 22:38:59 -0400

nbibtex (0.9.14-1) unstable; urgency=low

  * New upstream release
  * migrated to Lua 5.1

 -- Norman Ramsey <nr@eecs.harvard.edu>  Tue, 12 Sep 2006 19:50:58 -0400

nbibtex (0.9.13-1) unstable; urgency=low

  * New upstream release
  * Refactored bibtex.find to make it useful from scripts

 -- Norman Ramsey <nr@eecs.harvard.edu>  Thu,  7 Sep 2006 17:05:22 -0400

nbibtex (0.9.12-1) unstable; urgency=low

  * New upstream release
  * documented some ./configure options in the INSTALL file

 -- Norman Ramsey <nr@eecs.harvard.edu>  Mon, 15 May 2006 17:08:58 -0400

nbibtex (0.9.11-1) unstable; urgency=low
