@@ -5,8 +5,9 @@ nbibtex (0.9.18-2) unstable; urgency=low
   * Pointless LaTeX change in fun.tex to avoid \verb
   * Fix nbibtex(1) .rules typo
   * Re-integrate debian/ packaging changes from 0.9.17-2
+  * Do not ignore debian/rules clean errors
 
- -- Barak A. Pearlmutter <bap@debian.org>  Mon, 11 Aug 2008 12:52:24 +0200
+ -- Barak A. Pearlmutter <bap@debian.org>  Mon, 11 Aug 2008 14:33:14 +0200
 
 nbibtex (0.9.18-1) unstable; urgency=low
 
